src/objects/Apttus_Config2__ProductAttributeMatrixView__c.object
<CustomObject>
    <description>Represents a denormalized (materialized) view of product attribute and matrices</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines what records will be deleted after successfully creating new records.</description>
        <inlineHelpText>Determines what records will be deleted after successfully creating new records.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated attribute value matrix</description>
        <inlineHelpText>ID of the associated attribute value matrix</inlineHelpText>
        <label>Attribute Value Matrix</label>
        <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
        <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
        <relationshipName>ProductAttributeMatrixViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Columns__c</fullName>
        <description>The product attribute columns</description>
        <inlineHelpText>The product attribute columns</inlineHelpText>
        <label>Columns</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Hash__c</fullName>
        <description>The encoded matrix information.</description>
        <inlineHelpText>The encoded matrix information.</inlineHelpText>
        <label>Hash</label>
        <length>51200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Keys__c</fullName>
        <description>The encoded column tokens.</description>
        <inlineHelpText>The encoded column tokens.</inlineHelpText>
        <label>Keys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeScope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute group</description>
        <inlineHelpText>ID of the associated product attribute group</inlineHelpText>
        <label>Product Attribute Scope</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
        <relationshipName>ProductAttributeMatrixViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Attribute Matrix Views</relationshipLabel>
        <relationshipName>ProductAttributeMatrixViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Attribute Matrix View</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAMV-{0000000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Matrix Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>